--- a/tools/fleet-docker/Dockerfile
+++ b/tools/fleet-docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.23.0@sha256:51183f2cfa6320055da30872f211093f9ff1d3cf06f39a0bdb212314c5dc7375
 LABEL maintainer="Fleet Developers"
 
+ARG TARGETARCH
+
 RUN apk --update add ca-certificates
 RUN apk --no-cache add jq
 
@@ -9,6 +11,6 @@ RUN addgroup -S fleet && adduser -S fleet -G fleet
 
 USER fleet
 
-COPY fleet /usr/bin/
+COPY dist/fleet_linux_${TARGETARCH}*/fleet /usr/bin/
 
 CMD ["fleet", "serve"]
