--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
     name: "Test Client (${{ matrix.name }})"
     needs: [changes]
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     if: |
       github.event_name == 'pull_request' &&
       !github.event.pull_request.draft &&
