--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ on:
         type: string
 
 env:
-  BINARY_NAME: fleet
   REGISTRY: ghcr.io
+  BINARY_NAME: fleet
 
 # =============================================================================
 # JOBS
@@ -156,16 +156,16 @@ jobs:
       - name: Install ARM64 cross-compiler
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
 
-      - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v6
-        with:
-          install-only: true
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          install-only: true
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -182,34 +182,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REGISTRY: ${{ env.REGISTRY }}
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            goreleaser release --clean
-          else
-            goreleaser release --clean --snapshot
-          fi
+          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
+        run: goreleaser release --clean ${{ github.event_name != 'workflow_dispatch' && '--snapshot' || '' }}
 
-      - name: Build and push Docker image
-        run: |
-          IMAGE_BASE="${{ env.REGISTRY }}/${{ github.repository_owner }}/fleet"
-
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            VERSION="${{ inputs.version }}"
-            docker buildx build \
-              --platform linux/amd64,linux/arm64 \
-              --push \
-              -t "${IMAGE_BASE}:${VERSION}" \
-              -t "${IMAGE_BASE}:latest" \
-              -f tools/fleet-docker/Dockerfile \
-              .
-          else
-            docker buildx build \
-              --platform linux/amd64,linux/arm64 \
-              --push \
-              -t "${IMAGE_BASE}:latest" \
-              -f tools/fleet-docker/Dockerfile \
-              .
-          fi
 
   release:
     name: "Create Release"
@@ -261,7 +236,7 @@ jobs:
           name: "🦩 ${{ inputs.version }}"
           draft: false
           prerelease: false
-          body_path: RELEASE_HEADER.md
           token: ${{ secrets.GITHUB_TOKEN }}
+          body_path: RELEASE_HEADER.md
           files: |
             final-artifacts/clients/*
