--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ on:
   push:
     branches: [main, feature/rebased-main]
     paths-ignore:
+      # - '.github/**'
       - "**/*.md"
   workflow_dispatch:
     inputs:
