--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -166,7 +166,7 @@ jobs:
         env:
           REGISTRY: ${{ env.REGISTRY }}
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-          SKIP_DOCKER_PUSH: "true"
+          DOCKER_PUSH: "false"
         run: goreleaser release --snapshot --clean --skip=publish
 
   all-checks:
