--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,7 +152,7 @@ jobs:
           node-version-file: package.json
 
       - name: Install JS Dependencies
-        run: make deps-js
+        run: for i in 1 2 3; do make deps-js && break || sleep 15; done
 
       - name: Install ARM64 cross-compiler
         run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
