--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -188,10 +188,11 @@ jobs:
         run: goreleaser release --clean
 
       - name: Remove intermediate Docker tags
+        continue-on-error: true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh api /user/packages/container/fleet/versions --jq '.[] | select(.metadata.container.tags | any(test("-[a-z0-9]+$"))) | .id' | xargs -I{} gh api --method DELETE /user/packages/container/fleet/versions/{}
+          gh api /orgs/${{ github.repository_owner }}/packages/container/fleet/versions --jq '.[] | select(.metadata.container.tags | any(test("-[a-z0-9]+$"))) | .id' | xargs -I{} gh api --method DELETE /orgs/${{ github.repository_owner }}/packages/container/fleet/versions/{}
 
 
   release:
