--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -192,7 +192,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REGISTRY: ${{ env.REGISTRY }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
           DOCKER_TAG: ${{ github.event_name == 'workflow_dispatch' && inputs.version || 'latest' }}
           DOCKER_PUSH: "true"
         run: goreleaser release --clean
@@ -201,7 +201,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh api /orgs/${{ github.repository_owner }}/packages/container/fleet/versions --jq '.[] | select(.metadata.container.tags | any(test("-(amd64|arm64)$"))) | .id' | xargs -I{} gh api --method DELETE /orgs/${{ github.repository_owner }}/packages/container/fleet/versions/{}
+          gh api /orgs/${{ github.repository_owner }}/packages/container/${{ github.event.repository.name }}%2Ffleet/versions --jq '.[] | select(.metadata.container.tags | any(test("-(amd64|arm64)$"))) | .id' | xargs -I{} gh api --method DELETE /orgs/${{ github.repository_owner }}/packages/container/${{ github.event.repository.name }}%2Ffleet/versions/{}
 
 
   release:
