--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -165,7 +165,7 @@ jobs:
       - name: Build with GoReleaser
         env:
           REGISTRY: ${{ env.REGISTRY }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
           DOCKER_PUSH: "false"
           DOCKER_TAG: test
         run: goreleaser release --snapshot --clean --skip=publish
