--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ permissions:
 
 on:
   push:
-    branches: [main, feature/rebased-main]
+    branches: [main]
     paths-ignore:
       # - '.github/**'
       - "**/*.md"
@@ -241,7 +241,7 @@ jobs:
           VERSION="${{ inputs.version || 'latest' }}"
           cat > RELEASE_HEADER.md <<EOF
           ## Images
-          \`${{ env.REGISTRY }}/${{ github.repository_owner }}/fleet:${VERSION}\`
+          - \`${{ env.REGISTRY }}/${{ github.repository_owner }}/fleet:${VERSION}\`
 
           ## Fleet Clients
           - **macOS** (Universal): \`fleet-macos-universal.tar.gz\`
